--- a/ecoexplorer/pom.xml
+++ b/ecoexplorer/pom.xml
@@ -17,20 +17,24 @@
 		<java.version>21</java.version>
 	</properties>
 	<dependencies>
+		<!--
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
+		-->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
 
+		<!--
 		<dependency>
 			<groupId>org.postgresql</groupId>
 			<artifactId>postgresql</artifactId>
 			<scope>runtime</scope>
 		</dependency>
+		-->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
@@ -44,6 +48,14 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+			<plugin>
+	            <groupId>com.amashchenko.maven.plugin</groupId>
+	            <artifactId>gitflow-maven-plugin</artifactId>
+	            <version>1.20.0</version>
+	            <configuration>
+	                <!-- optional configuration -->
+	            </configuration>
+        	</plugin>
 		</plugins>
 	</build>
 
