--- a/ecoexplorer/src/main/resources/application.properties
+++ b/ecoexplorer/src/main/resources/application.properties
@@ -1,1 +1,5 @@
-
+spring.datasource.url=jdbc:postgresql://localhost:15432/ecoexplorer
+spring.datasource.username=ecoexplorer
+spring.datasource.password=password
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
